# Robotics-Controller-Yocto

./: .clangd  .gitignore  .gitmodules  README.md  build.sh  setup-yocto-env.sh
docs/: build-demonstration.sh  build-guide.md  dual-development-guide.md  dual-workflow.md  hardware-setup.md  quick-reference.md  troubleshooting.md
meta-robotics/: README.md
meta-robotics/conf/: README.md  layer.conf
meta-robotics/conf/machine/: beaglebone-robotics.conf  qemu-robotics.conf  raspberrypi3.conf  rpi3-robotics.conf  rpi4-robotics.conf
meta-robotics/conf/templates/: bblayers.conf  bblayers.conf.sample  local.conf  local.conf.sample
meta-robotics/recipes-core/: README.md
meta-robotics/recipes-core/images/: robotics-controller-image.bb  robotics-dev-image.bb  robotics-image.bb  robotics-qemu-image.bb
meta-robotics/recipes-kernel/linux/: linux-raspberrypi-rt_%.bbappend  linux-yocto-rt_%.bbappend
meta-robotics/recipes-robotics/robotics-controller/: robotics-controller_1.0.bb
scripts/: README.md  build.sh  change-machine.sh  clean.sh  dual-env.sh  flash.sh  install-web-interface.sh  manage-layers.sh  manage-recipe.sh  run.sh  save-config.sh  sync-meta-layer.sh  test-qemu-login.sh  verify-implementation.sh
src/cmake/: RoboticsDependencies.cmake
src/robotics-controller/: CMakeLists.txt  main.cpp
src/robotics-controller/actuators/: actuator_manager.hpp
src/robotics-controller/navigation/: navigation_engine.hpp
src/robotics-controller/vision/: CMakeLists.txt  vision_processor.hpp
src/scripts/: robotics-controller-init
(+28 files in other folders)
